Revert "fix(skeleton-viewer): Reduce font size to prevent clipping"
This reverts commit db786bf1810c32e65e0d243138957647d0c53508.

--- a/src/app/pages/translate/pose-viewers/skeleton-pose-viewer/skeleton-pose-viewer.component.scss
+++ b/src/app/pages/translate/pose-viewers/skeleton-pose-viewer/skeleton-pose-viewer.component.scss
@@ -5,7 +5,7 @@
 pose-viewer {
   display: flex;
   width: 100%;
-  font-size: 1em;
+  font-size: 2em;
   align-items: center;
   justify-content: center;
   text-align: center;
